--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,34 @@
 [tool.poetry]
-name = "src"
+name = "Zero Hunger"
 version = "0.1.0"
-description = ""
+description = "A zero hunger solution by solving farmers problems and agricultural challenges"
 authors = [
-    "Authors Here"
+    "Wadinga Leonard N.",
+    "Sone Gillis",
+    "Gaston Che",
+    "Crespy",
+    "Valery Yola",
+    "HOIBI HOIBI",
+    "Sonia",
 ]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+django = "^3.0"
+djangorestframework = "^3.11.0"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pytest-cov = "^2.4"
+pytest-django = "^3.9.0"
 flake8 = "^3.7.9"
+flake8-django = "^1.0.0"
+black = "^19.10b0"
+
+[tool.poetry.scripts]
+app = 'src:run'
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.poetry.scripts]
-app = 'src.app:run'
