--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "Zero Hunger"
+name = "zero_hunger"
 version = "0.1.0"
 description = "A zero hunger solution by solving farmers problems and agricultural challenges"
 authors = [
@@ -27,7 +27,7 @@ flake8-django = "^1.0.0"
 black = "^19.10b0"
 
 [tool.poetry.scripts]
-app = 'src:run'
+app = 'manage:wsgi'
 
 [build-system]
 requires = ["poetry>=0.12"]
