--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python = "^3.7"
 django = "^3.0"
 djangorestframework = "^3.11.0"
 gunicorn = "^20.0.4"
+python-decouple = "^3.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
