--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ more-itertools==8.2.0
 packaging==20.3
 pathspec==0.8.0
 pluggy==0.13.1
+psycopg2-binary==2.8.5
 py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
@@ -22,6 +23,7 @@ pyparsing==2.4.7
 pytest==5.4.1
 pytest-cov==2.8.1
 pytest-django==3.9.0
+python-decouple==3.3
 pytz==2020.1
 regex==2020.4.4
 six==1.14.0
