feat(setup): setups coverage Reports coverage after running tests

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@ src.egg-info
 venv
 zero_hunger.egg-info
 .env
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
