--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,11 @@
 [pytest]
+console_output_style = classic
 DJANGO_SETTINGS_MODULE=zero_hunger.settings
 python_files = tests.py test_*.py *_tests.py
 junit_family=xunit1
+addopts = -ra --cov=resources --cov=users --cov-report term
+
+[run]
+omit = 
+    /zero_hunger/*
+    /venv/*
