--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,16 @@ authors = [
 
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7, <3.9"
 django = "^3.0"
 djangorestframework = "^3.11.0"
-gunicorn = "^20.0.4"
 python-decouple = "^3.3"
+django-cors-headers = "^3.2.1"
+drf-yasg = "^1.17.1"
+django-rest-swagger = "^2.2.0"
+dj-rest-auth = "^1.0.5"
+djangorestframework-simplejwt = "^4.4.0"
+Pillow = "^7.1.2"
 
 
 [tool.poetry.dev-dependencies]
@@ -29,6 +34,7 @@ flake8 = "^3.7.9"
 flake8-django = "^1.0.0"
 black = "^19.10b0"
 isort = "^4.3.21"
+pytest-ordering = "^0.6"
 
 
 [tool.poetry.scripts]
