--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,5 @@
 DJANGO_SETTINGS_MODULE=zero_hunger.settings
 python_files = tests.py test_*.py *_tests.py
 junit_family=xunit1
+filterwarnings =
+    ignore
