--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,31 @@ appdirs==1.4.3
 asgiref==3.2.7
 attrs==19.3.0
 black==19.10b0
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==5.1
+defusedxml==0.6.0
 Django==3.0.6
+django-cors-headers==3.2.1
+django-rest-auth==0.9.5
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 entrypoints==0.3
 flake8==3.7.9
 flake8-django==1.0.0
+idna==2.9
 importlib-metadata==1.6.0
+inflection==0.4.0
+isort==4.3.21
+itypes==1.2.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
+oauthlib==3.1.0
 packaging==20.3
 pathspec==0.8.0
 pluggy==0.13.1
@@ -19,16 +34,24 @@ psycopg2-binary==2.8.5
 py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
+PyJWT==1.7.1
 pyparsing==2.4.7
 pytest==5.4.1
 pytest-cov==2.8.1
 pytest-django==3.9.0
 python-decouple==3.3
+python3-openid==3.1.0
 pytz==2020.1
 regex==2020.4.4
+requests==2.23.0
+requests-oauthlib==1.3.0
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
 six==1.14.0
 sqlparse==0.3.1
 toml==0.10.0
 typed-ast==1.4.1
+uritemplate==3.0.1
+urllib3==1.25.9
 wcwidth==0.1.9
 zipp==3.1.0
