--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,3 +54,9 @@ jobs:
           name: Run Pytest, report coverage
           command: |
             poetry run coverage run --omit="/home/circleci/.cache/pypoetry/virtualenvs" -m pytest
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
