--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,17 @@ click==7.1.2
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==5.1
-defusedxml==0.6.0
+dj-rest-auth==1.0.5
 Django==3.0.6
 django-cors-headers==3.2.1
-django-rest-auth==0.9.5
+django-rest-swagger==2.2.0
 djangorestframework==3.11.0
-djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
+drf-yasg==1.17.1
 entrypoints==0.3
 flake8==3.7.9
 flake8-django==1.0.0
+gunicorn==20.0.4
 idna==2.9
 importlib-metadata==1.6.0
 inflection==0.4.0
@@ -26,9 +28,10 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.2.0
-oauthlib==3.1.0
+openapi-codec==1.3.2
 packaging==20.3
 pathspec==0.8.0
+Pillow==7.1.2
 pluggy==0.13.1
 psycopg2-binary==2.8.5
 py==1.8.1
@@ -39,14 +42,14 @@ pyparsing==2.4.7
 pytest==5.4.1
 pytest-cov==2.8.1
 pytest-django==3.9.0
+pytest-ordering==0.6
 python-decouple==3.3
-python3-openid==3.1.0
 pytz==2020.1
 regex==2020.4.4
 requests==2.23.0
-requests-oauthlib==1.3.0
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
+simplejson==3.17.0
 six==1.14.0
 sqlparse==0.3.1
 toml==0.10.0
@@ -54,4 +57,5 @@ typed-ast==1.4.1
 uritemplate==3.0.1
 urllib3==1.25.9
 wcwidth==0.1.9
+whitenoise==5.0.1
 zipp==3.1.0
