--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,14 @@
-DEBUG=True
+DEBUG=
 
-SECRET_KEY=secret
+SECRET_KEY=
 
 # DB settings
-DB_ENGINE='django.db.backends.postgresql_psycopg2'
-DB_HOST='127.0.0.1'
-DB_NAME='zero_hunger'
+DB_ENGINE=
+DB_HOST=
+DB_NAME=
 DB_USER=
 DB_PASSWORD=
-DB_PORT=5432
+DB_PORT=
 
 # Email settings
 EMAIL_HOST=
@@ -16,3 +16,6 @@ EMAIL_PORT=
 EMAIL_HOST_PASSWORD=
 EMAIL_HOST_USER=
 EMAIL_USE_TLS=
+
+# Allowed Hosts
+ALLOWED_HOSTS=
