docs: updating project info

--- a/app.properties
+++ b/app.properties
@@ -1,13 +1,27 @@
-project.name:
-project.repo:
-project.sdgs:
-project.app.url:
-project.codacy.url:
+# the product
+name: FarmVoice
+sdgs: Goal 2 - Problem 1
+repos: https://github.com/BuildForSDG/Team-226-Backend, https://github.com/BuildForSDG/Team-226-Frontend
+app.urls: http://farmvoice.herokuapp.com/
+codacy.urls: https://app.codacy.com/gh/BuildForSDG/Team-226-Backend?utm_source=github.com&utm_medium=referral&utm_content=BuildForSDG/Team-226-Backend&utm_campaign=Badge_Grade_Settings
+app.forCOVID19: NO
+app.industries: agriculture, education
 
-project.team.members:
-project.team.slackname:
+# the codebase
+code.languages: Python
+code.frameworks: Django
+code.opensource.facebook: None
+code.opensource.contributions:
 
-project.fb.opensource:
+# the team
+team.name: team-226
+team.ttls: Gaston Che (@gastonche)
+team.mentors: Oyindamola Subair (@oyinda-subair)
+team.slackchannel: #team-226
 
+# == DO NOT EDIT ==
+# about the program
+# ================= 
 program.cohort:1
-
+program.name:BuildforSDG
+program.community:https://github.com/BuildForSDG
